add tailwind, postcss, etc

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+  @apply bg-gray-50 selection:text-white selection:bg-teal-400;
+}
+
+#root {
+  @apply h-screen;
+}
