--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,98 @@
 @tailwind utilities;
 
 body {
-  @apply p-4 max-w-2xl mx-auto bg-gray-50;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: radial-gradient(
+    1000px circle at 90vw 100px,
+    rgba(255, 255, 255, 0.2),
+    transparent 40%
+  );
 }
 
 html {
-  @apply bg-stone-100 selection:text-white selection:bg-emerald-400 w-screen scroll-p-14;
+  @apply bg-dark selection:text-white selection:bg-secondary w-screen scroll-p-14 text-primary;
+  /* TODO: make the theme css vars */
+  --card-color: rgb(44 54 57);
+}
+
+/* Theme from https://www.reddit.com/r/webdev/comments/up4wan/i_recreated_this_amazing_multicard_hover_effect/ */
+
+/* Neighbor borders */
+#cards:hover > .card::after {
+  opacity: 1;
+}
+
+.card {
+  background-color: rgba(255, 255, 255, 0.1); /* Border */
+  position: relative;
+  @apply h-48 p-4 rounded-md shadow-md shadow-dark;
+}
+
+.card:hover::before {
+  opacity: 1;
+}
+
+.card::before,
+.card::after {
+  border-radius: inherit;
+  content: "";
+  inset: 0px;
+  opacity: 0;
+  position: absolute;
+  transition: opacity 200ms;
+  height: 100%;
+  width: 100%;
+}
+
+/* Circle */
+.card::before {
+  background: radial-gradient(
+    800px circle at var(--x) var(--y),
+    rgba(255, 255, 255, 0.1),
+    transparent 40%
+  );
+  z-index: 3;
+}
+
+/* Border animate */
+.card::after {
+  background: radial-gradient(
+    600px circle at var(--x) var(--y),
+    rgba(255, 255, 255, 0.4),
+    transparent 40%
+  );
+  z-index: 1;
+}
+
+/* Border */
+.card > .card-content {
+  background-color: var(--card-color);
+  border-radius: inherit;
+  inset: 1px;
+  padding: 10px;
+  position: absolute;
+  z-index: 2;
+}
+
+.card-content::after {
+  @apply absolute inset-0 rounded-[inherit] w-full h-full opacity-[0.03];
+  content: "";
+  width: 100%;
+  /* https://grainy-gradients.vercel.app/ */
+  filter: contrast(170%) brightness(900%);
+  background: linear-gradient(
+      121deg,
+      rgba(0, 0, 255, 1),
+      rgba(218, 105, 105, 0)
+    ),
+    radial-gradient(
+      circle at 7% 74%,
+      rgba(0, 255, 255, 1),
+      rgba(0, 0, 255, 0.45)
+    ),
+    url("data:image/svg+xml,%3Csvg viewBox='0 0 250 250' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
 }
