fix border radius issue

--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ body {
 /* Border */
 .card > .card-content {
   @apply bg-zinc-900;
-  border-radius: inherit;
+  border-radius: 4px;
   inset: 2px;
   padding: 10px;
   position: absolute;
@@ -92,7 +92,8 @@ body {
 }
 
 .card-content::after {
-  @apply absolute inset-0 rounded-[inherit] w-full h-full opacity-[0.03];
+  @apply absolute inset-0 w-full h-full opacity-[0.03];
+  border-radius: 4px;
   content: "";
   width: 100%;
   /* This useful site was used to generate the grain: https://grainy-gradients.vercel.app/ */
